--- a/Html/index.html
+++ b/Html/index.html
@@ -15,7 +15,7 @@
         <div class="screen">
             <h1 class="title">Calculator</h1>
             <div class="calcScreen">
-                <p id="screen"></p>
+                <p id="screen">0</p>
             </div>
         </div>
         <div class="calc">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="numbers_0">
                     <button id="butNum" class="bt" onclick="changeScreen('0')">0</button>
-                    <button id="butSym" class="bt" onclick="changeScreen('.')">.</button>
+                    <button class="bt" onclick="changeScreen('.')">.</button>
                     <button id="butSym" class="bt" onclick="calculate()">=</button>
                 </div>
             </div>
